--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
-        "symfony/dom-crawler": "^7.2",
-        "wireui/wireui": "^2.4"
+        "symfony/dom-crawler": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
