--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "paypal/paypal-server-sdk": "^1.0",
+        "spatie/laravel-permission": "^6.18",
+        "srmklive/paypal": "^3.0",
         "symfony/dom-crawler": "^7.2"
     },
     "require-dev": {
